  process method name, overiding the request method based mapping; if set,
	SACS mappings on method level will be evaluated, the sacs mapping key is:
	[requestId]#[method name]
- drop plugin group folders and move all plugins up one level
- plugins: methodController: new example plugin illustrating some aspects of
  url mappings and view/controller logic

Release 0.9.10
- restructure store and admin code into separate apps with most of the store
  code shared
- remove custom Toolbox class and just use the setting to configure tools;
  this simplifies code at the cost of a little less documentation (tools are
	no longer visible via phpdoc)
- move viewDir support from SavantView to ZMSavantView and make 'views/' the
  default
- make default db provider more resiliant against loss of native resource (may
  happen if used in session handler)
- add zen cart compatible session handler for db storage
- add sacs handler for admin that supports roles
- make view data set via the controllers findView() method take precendence
  over data from getViewData()
- streamline saving/loading messages to/from the session
- implement ZMRequest::setFollowUpUrl() and getFollowUpUrl(), deprecate
  overriden versions in Request
- port zen_ functions into ZMZenCartAuthentication
- allow to set the single entry point filename (default is index.php) via
  setting: 'zenmagick.mvc.request.index'
- adjust exception logging log level a bit
- captcha: avoid using undefined define
- ZMCategories: add parent_id to SQL sort order
- flyoutCategories: initial version
- jscrollerSideboxes: initial version
- integrate ZMViewUtils into ZMSavantView; provide new $resources view var
  replacing the $utils method wrapper around ZMTemplateManager
- properly split template and resource path for view related methods
- fix b:#2996120 - missing parameter in pagination links
- add link to new admin UI to ZenMagick admin menu (marked experimental)
- add ZMNetUtils::getDomain()