@@ -58,3 +58,11 @@ library.useo2.sourceDir = ../libs/ultimate_seo_urls_2-110/
 library.useo2.targetDir = ${zenmagick.src.dir}/plugins/general/useo2/
 ## non core packer need to be added to classpath manually
 library.useo2.classpath = ${library.useo2.targetDir}etc
+
+## sfYaml
+library.sfYaml.version = 1.0.2
+library.sfYaml.class = ZMSfYamlPacker
+library.sfYaml.sourceDir = ../libs/yaml/
+library.sfYaml.targetDir = ${zenmagick.src.dir}/lib/core/external/
+## non core packer need to be added to classpath manually
+library.sfYaml.classpath =
